# QtExamples

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  requirements_dev.txt
.github/ISSUE_TEMPLATE/: request-example.md
additionals/fakequickcontrols2/: CMakeLists.txt  fakequickcontrols2.cpp  fakequickcontrols2.h
official/: README.md  main.py
official/charts/areachart/: main.py
official/charts/audio/: main.py
official/charts/barchart/: main.py
official/charts/barmodelmapper/: customtablemodel.py  main.py  tablewidget.py
official/charts/boxplotchart/: boxdatareader.py  boxplotdata_rc.py  main.py
official/charts/callout/: callout.py  main.py  view.py
official/charts/candlestickchart/: candlestickdata_rc.py  candlestickdatareader.py  main.py
official/dbus/pingpong/: ping.py  ping_common.py  pong.py
official/demos/calqlatr/: calqlatr_rc.py  main.py
official/demos/clocks/: clocks_rc.py  main.py
official/positioning/: clientapplication.py  logfile_rc.py  logfilepositionsource.py
others/customcompleter/: google_search.py  lib.py
others/dynamicqmltable/: main.py  main.qml
others/gst_pipeline/: main.py
others/matplotlib/: README.md  Subplot.py  barchart_demo.py  date.py  ellipse_demo.py  fill.py  histogram_features.py  image_demo.py  legend.py  log_demo.py  main.py  mathtext_examples.py  path_patch.py  pcolormesh_levels.py  pie_features.py  plot_streamplot.py  polar_demo.py  scatter_demo2.py  simple_plot.py  subplot.py  surface3d.py  table_demo.py  tex_demo.py
others/plugins/: README.md
others/qmlvideoviewer/: main.py
(+139 files in other folders)
